--- a/app/scripts/datainfo/analysis_markdown/heartfailure.Rmd
+++ b/app/scripts/datainfo/analysis_markdown/heartfailure.Rmd
@@ -3,9 +3,29 @@ title: "heartfailure"
 output: html_document
 ---
 
+Basic informations about the dataset:
+
+Age of the patients distribution:
+
+```{r}
+
+renderPlot({
+  hist(
+    data.diabetesData$Age,
+    main = 'Age distribution',
+    xlab = 'Age',
+    col = 'orange'
+  )
+})
+
+```
+
+
+
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
+
 
 ## R Markdown
 
